--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ legend
 {
     border-style: dashed;
     position:absolute;
-    botoom:0.5em;
+    bottom:0.5em;
     right: 10px;
     background-color: #f1ff00;
 }
